--- a/ROMKITCHEN/tools/ext4_unpacker.ini
+++ b/ROMKITCHEN/tools/ext4_unpacker.ini
@@ -4,8 +4,8 @@ language=en
 tempdir=$APPDIR
 
 [mainform]
-width=640
-height=770
+width=1296
+height=786
 treewidth=180
 dirsfirst=1
 keepiconnames=0
@@ -21,11 +21,11 @@ width=1050
 height=322
 
 [hu]
-applicationtitle=ICS/JB/EXT4 unpacker
-openimagedialogtitle=ICS/JB/EXT4 imagefájl megnyitása
+applicationtitle=ICS/JB/KK unpacker
+openimagedialogtitle=ICS/JB/KK imagefájl megnyitása
 saveimagedialogtitle=Mentés EXT4 formátumban
 exitbtn=&Kilépés
-openimagebtnhint=ICS/JB/EXT4 imagefájl megnyitása
+openimagebtnhint=ICS/JB/KK imagefájl megnyitása
 saveimagebtnhint=Mentés EXT4 formátumban
 openimagemenu=Megnyitás
 saveimagemenu=Mentés
@@ -59,11 +59,11 @@ extracticon=Ikon(ok) kibontása
 originaliconnames=Eredeti ikonfájlnevek megtartása
 
 [en]
-applicationtitle=ICS/JB/EXT4 unpacker
-openimagedialogtitle=Open ICS/JB/EXT4 image file
+applicationtitle=ICS/JB/KK unpacker
+openimagedialogtitle=Open ICS/JB/KK image file
 saveimagedialogtitle=Save as EXT4
 exitbtn=E&xit
-openimagebtnhint=Open ICS/JB/EXT4 image file
+openimagebtnhint=Open ICS/JB/KK image file
 saveimagebtnhint=Save as EXT4
 openimagemenu=Open
 saveimagemenu=Save
